--- a/game/gamefield.html
+++ b/game/gamefield.html
@@ -15,19 +15,21 @@
             <tbody id="grid-table"></tbody>
         </table>
     </div>
-    <div class="color-circle-container">
+    <div class = "bottom-ui">
+        <div class="color-circle-container">
         <div class="color-circle" id="colorCircle">
             <span class="circle-number">0</span>
         </div>
+        </div>
+        <div class="scale-container">
+            <div class="scale" id="colorScale"></div>
+        </div>
+        <button id="save-button" aria-label="Save">
+            <svg viewBox="0 0 24 24" width="24" height="24">
+                <path fill="white" d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V5h10v4z"/>
+            </svg>
+        </button>
     </div>
-    <div class="scale-container">
-        <div class="scale" id="colorScale"></div>
-    </div>
-    <button id="save-button" aria-label="Save">
-        <svg viewBox="0 0 24 24" width="24" height="24">
-            <path fill="white" d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V5h10v4z"/>
-        </svg>
-    </button>
     <script src="config.js"></script>
     <script src="classes.js"></script>
     <script src="modes.js"></script>
